<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/account"
            android:icon="@drawable/ic_orders"
            android:title="@string/my_account"/>
        <item
            android:id="@+id/organic"
            android:icon="@drawable/ic_orders"
            android:title="@string/organic_feeds"/>
        <item
            android:id="@+id/inorganic"
            android:icon="@drawable/ic_orders"
            android:title="@string/in_organic_feeds"/>
    </group>

    <item android:title="@string/specific_animal_feeds">
        <menu>
            <item
                android:id="@+id/poultry"
                android:icon="@drawable/ic_orders"
                android:title="@string/poultry_feeds"/>
            <item
                android:id="@+id/dairy"
                android:icon="@drawable/ic_orders"
                android:title="@string/dairy_animal_feeds"/>
            <item
                android:id="@+id/beef"
                android:icon="@drawable/ic_orders"
                android:title="@string/beef_animal_feeds"/>
        </menu>
    </item>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/orders"
                android:icon="@drawable/ic_orders"
                android:title="@string/my_orders"/>
            <item
                android:id="@+id/about_us"
                android:icon="@drawable/ic_orders"
                android:title="@string/about_us"/>
        </menu>
    </item>

</menu>