<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#597088"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/my_logo" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animal_nfeed_store"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:fontFamily="@font/amsterdam"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/animal_feeds_a_click_away"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"
        android:textSize="20sp"
        android:textColor="#ffffff"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_yours_today"
        android:layout_below="@id/description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#597089"
        android:onClick="openregistration"/>

</RelativeLayout>